plots will be added soon

--- a/calibration_unfiltered.ipynb
+++ b/calibration_unfiltered.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "d00ea010-c7e0-4618-a89e-912bbb72ad80",
    "metadata": {},
    "outputs": [],
@@ -23,10 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "07904906-7455-45ab-a7e1-574337b4a43f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2564027540.py, line 39)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[12], line 39\u001b[1;36m\u001b[0m\n\u001b[1;33m    import\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cae7aff0-53b8-4153-baa2-1c19a1edd830",
    "metadata": {},
    "outputs": [],
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2b1c6ed7-7b3f-470e-9e4b-1fefeb1ba59e",
    "metadata": {},
    "outputs": [],
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0cda90ae-dd92-4503-98bc-50ba4035ac91",
    "metadata": {},
    "outputs": [
@@ -477,7 +486,7 @@
        "[2063 rows x 33 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a16e9edb-c8ca-48cc-b16b-8782dd405119",
    "metadata": {},
    "outputs": [
@@ -518,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "14474c6e-8215-4d4a-9118-c28e469bb8f2",
    "metadata": {},
    "outputs": [
@@ -539,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c23653e2-a29d-46f5-9fbb-cc6a26b9e784",
    "metadata": {},
    "outputs": [
@@ -589,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e3d07673-2008-46ec-9f27-92b4066ba7ba",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "35f36cd9-1ddb-423d-b407-0e584c1be1c2",
    "metadata": {},
    "outputs": [
@@ -1407,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5da1e8ee-8f7b-45a5-994e-a65d84e7fc69",
    "metadata": {},
    "outputs": [
@@ -1718,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bfb73d2a-843a-4083-93a3-8406ff736e87",
    "metadata": {},
    "outputs": [],
@@ -1728,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3c83f5fe-8a52-4b25-aea4-edc83cb82f1e",
    "metadata": {},
    "outputs": [],
@@ -1752,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "43c45c84-645b-4cd9-bc1c-a4254813f1f8",
    "metadata": {},
    "outputs": [],
@@ -1769,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a85f12a2-5670-4d87-b42b-9a498fb0a7ac",
    "metadata": {},
    "outputs": [],
@@ -1779,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e19ce565-f907-498c-a796-b5d8d960a6d7",
    "metadata": {},
    "outputs": [],
@@ -1796,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "79a6e93d-6c33-452e-9468-72968a9a5f09",
    "metadata": {},
    "outputs": [
@@ -2097,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "7434b1c1-49b6-43aa-877d-e93993d17543",
    "metadata": {},
    "outputs": [],
@@ -2107,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d9c5e378-37db-43dc-ac9b-44aff43e7e43",
    "metadata": {},
    "outputs": [],
@@ -2117,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "417f939f-8574-441a-ab5e-09b8ed767a1d",
    "metadata": {},
    "outputs": [],
@@ -2127,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "581b55f0-bba5-4a47-af60-ec76d2131640",
    "metadata": {},
    "outputs": [],
@@ -2137,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "bd2785f4-f568-4d62-b8af-e60a5fb2bcbf",
    "metadata": {},
    "outputs": [
@@ -2439,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "e039963d-f92f-44f7-a71c-8b78e6d33a39",
    "metadata": {},
    "outputs": [
@@ -2472,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "5cbce23a-3a52-4dd1-b365-68381526834f",
    "metadata": {},
    "outputs": [],
@@ -2492,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "99c21d12-850e-4f69-a3d8-14abaec77a6a",
    "metadata": {},
    "outputs": [],
@@ -2519,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "9b6cead9-1607-4c02-a158-4e38e59f77d0",
    "metadata": {},
    "outputs": [
@@ -2543,7 +2552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "e07b125e",
    "metadata": {},
    "outputs": [
@@ -3820,7 +3829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "5f4fa286",
    "metadata": {},
    "outputs": [
@@ -11347,7 +11356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "e8c76707",
    "metadata": {},
    "outputs": [],
@@ -11367,7 +11376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "45b99f60",
    "metadata": {},
    "outputs": [],
@@ -11381,7 +11390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "70a97068",
    "metadata": {},
    "outputs": [
@@ -11644,7 +11653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "03f37136",
    "metadata": {},
    "outputs": [
@@ -11850,7 +11859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "c9647685",
    "metadata": {},
    "outputs": [
@@ -12056,7 +12065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "c5d16b71",
    "metadata": {},
    "outputs": [],
@@ -12082,7 +12091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "69c0ef71",
    "metadata": {},
    "outputs": [
@@ -12257,7 +12266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "511b1470",
    "metadata": {},
    "outputs": [
@@ -18669,7 +18678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "085ac933-86e6-4705-bf74-09aca2ed1def",
    "metadata": {},
    "outputs": [],
@@ -18735,7 +18744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "e3391049",
    "metadata": {},
    "outputs": [
@@ -18825,7 +18834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "899f55b4-5f99-4dd7-bbe3-ee41148b4e1a",
    "metadata": {},
    "outputs": [],
@@ -18848,7 +18857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "4e1a2c3a",
    "metadata": {},
    "outputs": [],
@@ -18873,7 +18882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "3ef57d2d",
    "metadata": {},
    "outputs": [
@@ -20840,7 +20849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "1bdd775b",
    "metadata": {},
    "outputs": [
@@ -22799,7 +22808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "a40c7849",
    "metadata": {},
    "outputs": [
@@ -24768,7 +24777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "dbd98dda",
    "metadata": {},
    "outputs": [
