--- a/models/Stacking_Regression_Linear_Regression.ipynb
+++ b/models/Stacking_Regression_Linear_Regression.ipynb
@@ -79,8 +79,8 @@
     "    else:\n",
     "        unit = 'pm_conc'\n",
     "    \n",
-    "    # Scatter_Plot(combined_df, train_df, test_df, r2_score_train, r2_score_test, v, unit,ml_type)\n",
-    "    # qq_plot(test_df, v, unit,ml_type)\n",
+    "    Scatter_Plot(combined_df, train_df, test_df, r2_score_train, r2_score_test, v, unit,ml_type)\n",
+    "    qq_plot(test_df, v, unit,ml_type)\n",
     "    return r2_score_test"
    ]
   }
