Added the feature importance plot for Super Learners

--- a/plots/Feature_Importance_Plot_Linear_Regressor.ipynb
+++ b/plots/Feature_Importance_Plot_Linear_Regressor.ipynb
@@ -10,7 +10,8 @@
     "def Feature_Importance_Linear_Regressor(lm, filtered_data,v,unit,ml_type):\n",
     "    feature_importances = lm.coef_\n",
     "    print(feature_importances)   \n",
-    "        \n",
+    "    for feature, coef in zip(X_train.columns, meta_learner_coef):\n",
+    "    print(f'{feature}: {coef}')  \n",
     "    # # Get feature names (you may have a predefined list of feature names)\n",
     "    feature_names = [f\"{dict_col_regression[i]}\" for i in X_train.columns]\n",
     "    print(feature_names)\n",
