--- a/models/Stacking_Regression_Linear_Regression.ipynb
+++ b/models/Stacking_Regression_Linear_Regression.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "%run D:/UTD/UTDFall2023/Calibration-of-LoRaNodes-using-Super-Learners/plots/Scatter_Plot.ipynb\n",
-    "%run D:/UTD/UTDFall2023/Calibration-of-LoRaNodes-using-Super-Learners/plots/QQ_Plot.ipynb"
+    "%run D:/UTD/UTDFall2023/Calibration-of-LoRaNodes-using-Super-Learners/plots/QQ_Plot.ipynb\n",
+    "%run D:/UTD/UTDFall2023/Calibration-of-LoRaNodes-using-Super-Learners/plots/Feature_Importance_Plot_Stack_Regressor.ipynb"
    ]
   },
   {
@@ -24,28 +25,28 @@
     "\n",
     "    # Define base learners\n",
     "    rf_regressor = RandomForestRegressor(n_estimators=param_dict[0]['n_estimators'], \n",
-    "                                         max_depth=param_dict[0]['max_depth'],\n",
-    "                                         min_samples_leaf=param_dict[0]['min_samples_leaf'],\n",
-    "                                         min_samples_split=param_dict[0]['min_samples_split'], \n",
-    "                                         random_state=0) #RandomForestRegressor(n_estimators = 50, random_state = 0)\n",
+    "                                            max_depth=param_dict[0]['max_depth'],\n",
+    "                                            min_samples_leaf=param_dict[0]['min_samples_leaf'],\n",
+    "                                            min_samples_split=param_dict[0]['min_samples_split'], \n",
+    "                                            random_state=0) #RandomForestRegressor(n_estimators = 50, random_state = 0)\n",
     "\n",
     "    bagging_regressor = BaggingRegressor(estimator=DecisionTreeRegressor(), \n",
-    "                                         n_estimators=param_dict[1]['n_estimators'],\n",
-    "                                         max_samples=param_dict[1]['max_samples'], \n",
-    "                                         max_features=param_dict[1]['max_features'],\n",
-    "                                         random_state=42)\n",
+    "                                            n_estimators=param_dict[1]['n_estimators'],\n",
+    "                                            max_samples=param_dict[1]['max_samples'], \n",
+    "                                            max_features=param_dict[1]['max_features'],\n",
+    "                                            random_state=42)\n",
     "\n",
     "    lgbm_regressor = LGBMRegressor(n_estimators=param_dict[2]['n_estimators'], \n",
-    "                                   max_depth=param_dict[2]['max_depth'],\n",
-    "                                   learning_rate=param_dict[2]['learning_rate'], \n",
-    "                                   num_leaves=param_dict[2]['num_leaves'],\n",
-    "                                   min_child_samples=param_dict[2]['min_child_samples'], \n",
-    "                                   random_state=1)\n",
+    "                                    max_depth=param_dict[2]['max_depth'],\n",
+    "                                    learning_rate=param_dict[2]['learning_rate'], \n",
+    "                                    num_leaves=param_dict[2]['num_leaves'],\n",
+    "                                    min_child_samples=param_dict[2]['min_child_samples'], \n",
+    "                                    random_state=1)\n",
     "\n",
     "    dt_regressor = DecisionTreeRegressor(max_depth=param_dict[3]['max_depth'],\n",
-    "                                         min_samples_split=param_dict[3]['min_samples_split'],\n",
-    "                                         min_samples_leaf=param_dict[3]['min_samples_leaf'],\n",
-    "                                         random_state=0)\n",
+    "                                            min_samples_split=param_dict[3]['min_samples_split'],\n",
+    "                                            min_samples_leaf=param_dict[3]['min_samples_leaf'],\n",
+    "                                            random_state=0)\n",
     "\n",
     "    model = StackingRegressor(\n",
     "        estimators=[\n",
@@ -73,15 +74,16 @@
     "    r2_score_test = round(metrics.r2_score(y_test, predict_test), 2)\n",
     "    print('r2 train', r2_score_train)    \n",
     "    print('r2 test', r2_score_test) \n",
-    "    \n",
+    "\n",
     "    if 'dCn' in filtered_data:\n",
     "        unit = 'dCn'\n",
     "    else:\n",
     "        unit = 'pm_conc'\n",
-    "    \n",
+    "\n",
     "    Scatter_Plot(combined_df, train_df, test_df, r2_score_train, r2_score_test, v, unit,ml_type)\n",
     "    qq_plot(test_df, v, unit,ml_type)\n",
-    "    return r2_score_test"
+    "    Feature_Importance_Stack_Regressor(model, filtered_data, v, unit,ml_type)\n",
+    "    return r2_score_test\n"
    ]
   }
  ],
