added error distribution plots

--- a/plots/QQ_Plot.ipynb
+++ b/plots/QQ_Plot.ipynb
@@ -30,7 +30,7 @@
     "    percentile_labels = [\"0th Percentile\", \"25th Percentile\", \"50th Percentile\", \"75th Percentile\", \"100th Percentile\"]\n",
     "\n",
     "    # Create a QQ plot with a specified figure size\n",
-    "    fig, ax = plt.subplots(figsize=(6, 6))  # Set figure size to 8x8 inches\n",
+    "    fig, ax = plt.subplots(figsize=(6, 6))  # Set figure size to 6x6 inches\n",
     "    qqplot_2samples(actual_values, predicted_values, ax=ax)\n",
     "\n",
     "    # Add colored diamond markers for percentiles with z-order to place them on top\n",
@@ -58,16 +58,32 @@
     "        linestyle='--', color='grey', linewidth=1.5, label='', zorder=1\n",
     "    )\n",
     "\n",
-    "    # Add title and axis labels\n",
-    "    plt.title(dict_col_regression[v + 'Palas'] + ' Quantile - Quantile Plot', fontsize=14, fontweight=\"bold\")\n",
-    "    plt.xlabel('Actual ' + dict_col_regression[v + 'Palas'] + ' ' + unit_regression.get(unit, ''), fontsize=12)\n",
-    "    plt.ylabel('Predicted ' + dict_col_regression[v + 'Palas'] + ' ' + unit_regression.get(unit, ''), fontsize=12)\n",
+    "    # Add title with bold font\n",
+    "    plt.title(dict_col_regression[v + 'Palas'] + ' Quantile - Quantile Plot', fontsize=15, fontweight=\"bold\")\n",
     "\n",
-    "    # Add legend\n",
-    "    plt.legend(loc='upper left', fontsize=10)\n",
+    "    # Bold and larger x-axis and y-axis labels\n",
+    "    plt.xlabel(\n",
+    "        'Actual ' + dict_col_regression[v + 'Palas'] + ' ' + unit_regression.get(unit, ''),\n",
+    "        fontsize=13,\n",
+    "        fontweight='bold'\n",
+    "    )\n",
+    "    plt.ylabel(\n",
+    "        'Predicted ' + dict_col_regression[v + 'Palas'] + ' ' + unit_regression.get(unit, ''),\n",
+    "        fontsize=13,\n",
+    "        fontweight='bold'\n",
+    "    )\n",
+    "\n",
+    "    # Customize legend to use bold font\n",
+    "    legend = plt.legend(loc='upper left', fontsize=10)\n",
+    "    for text in legend.get_texts():\n",
+    "        text.set_fontweight('bold')\n",
     "\n",
     "    # Save the plot\n",
-    "    plt.savefig(f'D:/UTD/UTDFall2023/Calibration-of-LoRaNodes-using-Super-Learners/plots/qqplots/qq_plot_{ml_type}_{v}.png', format='png', dpi=300)\n",
+    "    plt.savefig(\n",
+    "        f'D:/UTD/UTDFall2023/Calibration-of-LoRaNodes-using-Super-Learners/plots/qqplots/qq_plot_{ml_type}_{v}.png',\n",
+    "        format='png',\n",
+    "        dpi=300\n",
+    "    )\n",
     "\n",
     "    # Show the plot\n",
     "    plt.show()\n"
