--- a/plots/Scatter_Plot.ipynb
+++ b/plots/Scatter_Plot.ipynb
@@ -63,7 +63,7 @@
     "        ax=g.ax_joint,\n",
     "        linestyle='--', \n",
     "        color='grey',\n",
-    "        label= '1:1 line',\n",
+    "        label='1:1 line',\n",
     "        linewidth=1.5\n",
     "    )\n",
     "\n",
@@ -71,26 +71,30 @@
     "    g.ax_joint.set_xlim(0, max_limit)\n",
     "    g.ax_joint.set_ylim(0, max_limit)\n",
     "\n",
-    "    # Adding labels\n",
+    "    # Adding labels with bold font\n",
     "    g.ax_joint.set_xlabel(\n",
     "        \"Actual \" + dict_col_regression.get(v + \"Palas\", \"\") + \" \" + unit_regression.get(unit, \"\"),\n",
-    "        fontsize=12\n",
+    "        fontsize=14,\n",
+    "        fontweight='bold'\n",
     "    )\n",
     "    g.ax_joint.set_ylabel(\n",
     "        \"Predicted \" + dict_col_regression.get(v + \"Palas\", \"\") + \" \" + unit_regression.get(unit, \"\"),\n",
-    "        fontsize=12\n",
+    "        fontsize=14,\n",
+    "        fontweight='bold'\n",
     "    )\n",
     "\n",
     "    # Add a suptitle above the plot with larger font\n",
     "    g.fig.suptitle(\n",
     "        dict_col_regression.get(v + \"Palas\", \"\") + \" Scatter Plot\",\n",
-    "        fontsize=14,\n",
+    "        fontsize=16,\n",
     "        fontweight=\"bold\",\n",
     "        y=1.05  # Adjust the position to move the title further above the plot\n",
     "    )\n",
     "\n",
-    "    # Add legend for R²\n",
-    "    g.ax_joint.legend(loc='upper left')\n",
+    "    # Customize legend to use bold font\n",
+    "    legend = g.ax_joint.legend(loc='upper left', fontsize=8)\n",
+    "    for text in legend.get_texts():\n",
+    "        text.set_fontweight('bold')\n",
     "\n",
     "    # Adjust layout to prevent overlap and ensure a good figure appearance\n",
     "    plt.tight_layout()\n",
